<resources>
    <string name="app_name">EVurbs</string>

    <!-- Strings related to login -->
    <string name="prompt_name">Name</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_phone">Phone</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_start">StartActivity</string>
    <string name="action_get_started">Get Started</string>
    <string name="get_started_text">The best ideas arrive at the most arbitrary moments. At sixmo, it might be while devouring hot kachoris or watching cats on Youtube. Alternatively, we research and brainstorm, OD\'ing on unsafe amounts of caffeine. (Wikipedia + filter coffee = heaven). Either way, you can rest assured that all projects begin with good research and ideation.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="event_description_hint">Write a short description about your event.</string>
    <string name="event_name_hint">Event</string>
    <string name="next">Next</string>
    <string name="happen_hint">When Event is gonna Happen ?</string>
    <string name="time_hint">Time of Event</string>
    <string name="thanks">Thanks for your Request.</string>
    <string name="thanks_description">Our Representative will contact you for the verification process</string>
    <string name="select_time">Select from time</string>
    <string name="internetConnectionError">Connection Error</string>
    <string name="internetConnectionErrorDescription">Your Device is not connected. Please check your connection settings and continue.</string>
    <string name="action_logout">Logout</string>
    <string name="action_event_requests">My Requests</string>
    <string name="action_event_all_requests">Requests</string>
    <string name="action_my_profile">My Profile</string>
    <string name="action_event_users">Search Member</string>
    <string name="action_status">Satistics</string>
    <string name="action_settings">Settings</string>
    <string name="developer">App Developer</string>
    <string name="developer_info">Jobin George \njobingn@gmail.com \n8197963248</string>
    <string name="sixmo_description"> Sixmo has been established primarily as an event management company for all kinds of events. We are your go – to guys for events varying from Weddings, DJ night parties, birthday parties, private parties to corporate events. We started out in the year2013 and are currently established in Bangalore. Our team has been privileged to have organized events in almost all the happening places of our beloved city. We also indulge in promotions and advertising. Our aim always has been to build long term relationships with our clients and provide them with innovative and satisfying services. Our photography and model management services are also known for their quality and credibility. Summing it up, we are a group intended on entertaining you to your hearts’ content and providing you with all the right kind of services. As we say here, all you have to do is dream and we at Sixmo say “Damn right!!”</string>
    <string name="orangemedia_description">We are decoders of the common language uniting brands with their consumers. Keeping things simple and minimal is the key to everything we do. It’s true, we produce inspirational and thoughtful work, yet we’re a humble bunch. We at Orange offers an \"all-round\" service. So whether you need a digital solution, print, media, or a multi faceted campaign, we have the expertise to make it happen, on time.</string>
    <string name="rcs_description">RCS is the Bangalore\'s leading modelling agency. Having an elite reputation for providing top-class international models, hostesses, promotional staff and entertainers which is second to none. We provide high-quality services including model training, events management and exclusive productions to all forms of agencies and companies, including all forms of marketing communications.</string>
</resources>
