<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:gravity="center_horizontal"
    android:orientation="vertical"
    android:id="@+id/main_layout"
    android:background="#ff8035"
    android:layout_gravity="center_vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" tools:context=".LoginActivity">

    <ScrollView android:id="@+id/login_form" android:layout_width="match_parent"
        android:scrollbars="none"
        android:layout_height="wrap_content">

        <LinearLayout android:id="@+id/email_login_form" android:layout_width="match_parent"
            android:layout_marginTop="25dp"
            android:layout_height="wrap_content" android:orientation="vertical">
            <ImageView
                android:layout_width="225dp"
                android:layout_height="225dp"
                android:layout_gravity="center"
                android:src="@drawable/sixmo_logo_white"/>

                <EditText android:id="@+id/email" android:layout_width="match_parent"
                    android:layout_height="40dp" android:hint="@string/prompt_email"
                    android:background="@drawable/round_white_input"
                    android:padding="5dp"
                    android:layout_marginTop="10dp"
                    android:inputType="textEmailAddress" android:maxLines="1"
                    android:singleLine="true" />

                <EditText android:id="@+id/phone" android:layout_width="match_parent"
                    android:layout_height="40dp" android:hint="@string/prompt_phone"
                    android:padding="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/round_white_input"
                    android:imeOptions="actionUnspecified" android:inputType="phone"
                    android:maxLines="1" android:singleLine="true" />

            <TextView android:id="@+id/sign_in_button"
                android:layout_width="200dp" android:layout_height="wrap_content"
                android:text="@string/action_sign_in"
                android:gravity="center"
                android:layout_gravity="center"
                android:textAllCaps="false"
                android:layout_marginTop="20dp"
                android:textColor="#fcfcfc"
                android:textSize="18dp"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
